# recoll-api-rest

./: .gitignore  Dockerfile  README.md  compose.yaml  poetry.toml  pyproject.toml  tox.ini
.github/actions/build-recoll/: action.yml
.github/actions/download-recoll/: action.yml
.github/workflows/: cd.yml  ci.yml
src/api/: main-test.py  main.py
typings/recoll/: __init__.py
